--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                         <label for="ilogin">Login</label>
                     </div>
                     <div>
-                        <span class="material-symbols-outlined">
-                            key
-                            </span>
+                        <span class="material-symbols-outlined">key</span>
                         <input type="email" name="senha" id="isenha" placeholder="Sua senha" required minlength="8" autocomplete="current-password">
                         <label for="isenha">Senha</label>
                         
