--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <div>
                         <span class="material-symbols-outlined">key</span>
-                        <input type="email" name="senha" id="isenha" placeholder="Sua senha" required minlength="8" autocomplete="current-password">
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" required minlength="8" autocomplete="current-password">
                         <label for="isenha">Senha</label>
                         
                     </div>
