--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                         <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" required autocomplete="email">
                         <label for="ilogin">Login</label>
                     </div>
-                    <div>
+                    <div class="campo">
                         <span class="material-symbols-outlined">key</span>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" required minlength="8" autocomplete="current-password">
                         <label for="isenha">Senha</label>
                         
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Esqueci a senha <span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
